# myshop

./: .gitignore  pyproject.toml  readme.md  requirements.txt
admin/: site.py
api/: api.py  home_router.py
cart/: forms.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py
cart/templates/cart/: index.html
doc/: django-tailwind.md
home/: forms.py  urls.py  views.py  widgets.py
home/templates/home/: home.html  login.html  register.html
myadmin/: admin.py
myshop/: settings.py  urls.py
orders/: models.py
orders/migrations/: 0001_initial.py  0002_initial.py
payments/: models.py
payments/migrations/: 0001_initial.py
products/: admin.py  models.py  urls.py  views.py  widgets.py
products/migrations/: 0001_initial.py  0002_alter_productattribute_desc.py  0002_category_desc_category_lft_category_rght_and_more.py  0003_category_attributes_alter_category_parent_and_more.py
products/templates/products/: product_detail.html  product_list.html
promotions/: models.py
promotions/migrations/: 0001_initial.py  0002_initial.py
reviews/: models.py
reviews/migrations/: 0001_initial.py  0002_initial.py
templates/: base.html  footer.html  header.html
theme/static_src/: package-lock.json  tailwind.config.js
users/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_user_user_type_alter_user_groups_and_more.py  0003_clientuser_manageruser_user_nickname_and_more.py  0004_alter_user_score.py  0005_alter_user_username.py
utils/: decorators.py  test.py
(+13 files in other folders)
