[project]
name = "myshop"
version = "0.1.0"
description = "小小商城"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "django==5.2.3",
    "django-mptt>=0.17.0",
    "django-ninja>=1.4.3",
    "django-widget-tweaks>=1.5.0",
    "pillow>=11.3.0",
]

[[tool.uv.index]]
# Optional name for the index. 这个可以不写
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
